<resources>
    <string name="app_name">VotingPolicyLogin</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password_text">Forget Password?</string>
    <string name="todo">TODO</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_tt">Forgot Password?</string>
    <string name="send_code">Send Code</string>
    <string name="we_just_need_your_registered_email_address_to_send_you_password_reset">We just need your registered email address to send you password reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_voting">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="submit">submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign Up!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">register</string>
</resources>